# nodejs-server-server/service/DefaultService.js
@@ -22,6 +22,27 @@ exports.getComments = function(title) {
 
 
 /**
+ * Gets a new csrf token
+ * Gets a new csrf token
+ *
+ * returns csrf
+ **/
+exports.getCsrfToken = function() {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "csrfToken" : "SFfkaSD-dksfjfjsSKJ33DN-fdS-fSf"
+};
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
  * Gets a document
  * Gets a document
  *
@@ -55,6 +76,27 @@ exports.getDocumentHistory = function(model,title) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = "{}";
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
+ * Gets user info
+ * Gets user info
+ *
+ * returns user
+ **/
+exports.getMe = function() {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "name" : "John Doe"
+};
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -179,6 +221,51 @@ exports.listModels = function(properties) {
   },
   "tag" : [ "tag", "tag" ]
 } ];
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
+ * Login
+ * Logs in a user  
+ *
+ * code String URS authentication code (optional)
+ * returns success
+ **/
+exports.login = function(code) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "code" : 0,
+  "description" : "description"
+};
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
+ * Logout
+ * Logs out the user
+ *
+ * returns success
+ **/
+exports.logout = function() {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "code" : 0,
+  "description" : "description"
+};
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
